--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".History"
+            android:exported="false" />
+        <activity
+            android:name=".Favorites_list"
+            android:exported="false" />
+        <activity
             android:name=".Matkon1"
             android:exported="false" />
         <activity
