--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,17 @@ android {
 }
 
 dependencies {
-
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.activity:activity:1.8.0'
+    //implementation 'androidx.activity:activity:1.8.0'
     implementation 'com.google.firebase:firebase-auth:23.2.0'
-    implementation 'androidx.credentials:credentials:1.5.0-rc01'
+    implementation 'androidx.credentials:credentials:1.3.0'
     implementation 'androidx.credentials:credentials-play-services-auth:1.3.0'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
+   // implementation 'androidx.activity:activity:1.10.1'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
