--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".Recipe_List_Main"
+            android:exported="false" />
+        <activity
             android:name=".History"
             android:exported="false" />
         <activity
