--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".Recipe_item"
+            android:exported="false" />
+        <activity
+            android:name=".RecipeListActivity"
+            android:exported="false" />
+        <activity
             android:name=".AlarmActivity"
             android:exported="false" />
         <activity
@@ -21,7 +27,7 @@
             android:name=".History"
             android:exported="false" />
         <activity
-            android:name=".RecipeListsActivity"
+            android:name=".RecipeFavoriteListActivity"
             android:exported="false" />
         <activity
             android:name=".RecipeExampleActivity"
