--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
+        <activity
+            android:name=".RecipeExample"
+            android:exported="false"
+            android:label="@string/title_activity_recipe_example"
+            android:theme="@style/Theme.MyRecipe.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".Recipe_item"
             android:exported="false" />
@@ -25,7 +35,6 @@
         <activity
             android:name=".UploadNewRecipeActivity"
             android:exported="false" />
-
         <activity
             android:name=".RecipeFavoriteListActivity"
             android:exported="false" />
@@ -50,10 +59,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlarmReceiver"
+
+        <receiver
+            android:name=".AlarmReceiver"
             android:enabled="true"
-            android:exported="true">
-        </receiver>
+            android:exported="true" />
     </application>
 
 </manifest>
