--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.google.firebase:firebase-storage:21.0.1'
-    implementation 'androidx.activity:activity:1.8.0'
+    //implementation 'androidx.activity:activity:1.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.android.material:material:1.12.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
 }
