--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +17,9 @@
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
@@ -26,9 +30,6 @@
             android:exported="false"
             android:label="@string/title_activity_recipe_example"
             android:theme="@style/Theme.MyRecipe.NoActionBar" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
         <activity
             android:name=".Recipe_item"
             android:exported="false" />
@@ -43,9 +44,6 @@
             android:exported="false" />
         <activity
             android:name=".RecipeFavoriteListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RecipeExampleActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
