--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".FavoritesListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
@@ -52,7 +55,7 @@
             android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".Registration"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".FirstScreenActivity"
