--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.activity:activity:1.10.1'
+    //implementation 'androidx.activity:activity:1.10.1'
 
 
     testImplementation 'junit:junit:4.13.2'
