--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.google.firebase:firebase-storage:21.0.1'
+
+//    implementation 'com.google.firebase.firestore.FirebaseFirestore:33.14.0'
+//   implementation 'com.google.firebase.firestore.QueryDocumentSnapshot:33.14.0'
+//    implementation 'com.google.firebase.firestore.QuerySnapshot:33.14.0'
+
     //implementation 'androidx.activity:activity:1.8.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.10'
