--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,15 +46,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.google.firebase:firebase-storage:21.0.1'
 
-//    implementation 'com.google.firebase.firestore.FirebaseFirestore:33.14.0'
-//   implementation 'com.google.firebase.firestore.QueryDocumentSnapshot:33.14.0'
-//    implementation 'com.google.firebase.firestore.QuerySnapshot:33.14.0'
 
-    //implementation 'androidx.activity:activity:1.8.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.android.material:material:1.12.0'
-    //implementation 'androidx.activity:activity:1.10.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
 
     testImplementation 'junit:junit:4.13.2'
