--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,15 @@
         tools:targetApi="31">
         <activity
             android:name=".FavoritesListActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".AboutAppActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".RecipeView"
@@ -35,12 +38,15 @@
             android:exported="false" />
         <activity
             android:name=".RecipeListActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".AlarmActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".UploadNewRecipeActivity"
+            android:theme="@style/Theme.MyRecipe.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
