--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,40 +16,47 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRecipe"
         tools:targetApi="31">
-
+        <activity
+            android:name=".MyRecipesListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".myRecipes"
+            android:exported="false" />
+        <activity
+            android:name=".ChatWithAnotherUserActivity"
+            android:exported="false" />
         <activity
             android:name=".FavoritesListActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
-            android:name=".ChatActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:name=".GeminiActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".AboutAppActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".RecipeViewActivity"
-            android:theme="@style/Theme.MyRecipe"
             android:exported="false"
-            />
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".RecipeListActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".AlarmActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".UploadNewRecipeActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".HomeActivity"
-            android:theme="@style/Theme.MyRecipe"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyRecipe" />
         <activity
             android:name=".SignInActivity"
             android:exported="false" />
@@ -61,6 +68,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
