--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:exported="false"
             android:theme="@style/Theme.MyRecipe" />
         <activity
-            android:name=".GeminiActivity"
+            android:name=".ChatActivity"
             android:exported="false"
             android:theme="@style/Theme.MyRecipe" />
         <activity
